--- a/SO_Numerical_Experiments/vars_levy.ipynb
+++ b/SO_Numerical_Experiments/vars_levy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,37 +78,37 @@
        "    <tr>\n",
        "      <th>95</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>7.835015</td>\n",
-       "      <td>-1.328018</td>\n",
-       "      <td>-4.179510</td>\n",
+       "      <td>-4.200538</td>\n",
+       "      <td>7.433987</td>\n",
+       "      <td>-6.014844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>-4.303682</td>\n",
-       "      <td>8.870256</td>\n",
-       "      <td>-6.527571</td>\n",
+       "      <td>0.829132</td>\n",
+       "      <td>0.503622</td>\n",
+       "      <td>-0.053322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>1.074446</td>\n",
-       "      <td>0.381405</td>\n",
-       "      <td>-0.046620</td>\n",
+       "      <td>3.667881</td>\n",
+       "      <td>9.389405</td>\n",
+       "      <td>-7.052950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>-2.645456</td>\n",
-       "      <td>-4.379010</td>\n",
-       "      <td>-11.570148</td>\n",
+       "      <td>8.585462</td>\n",
+       "      <td>-2.151338</td>\n",
+       "      <td>-18.928258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>3.468112</td>\n",
-       "      <td>-7.955136</td>\n",
-       "      <td>-11.405954</td>\n",
+       "      <td>-1.955202</td>\n",
+       "      <td>-2.479894</td>\n",
+       "      <td>-7.364878</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -123,11 +123,11 @@
        "3     0.0 -0.581540  9.872013 -10.784934\n",
        "4     0.0 -4.725866 -2.768824  -6.485489\n",
        "..    ...       ...       ...        ...\n",
-       "95   10.0  7.835015 -1.328018  -4.179510\n",
-       "96   10.0 -4.303682  8.870256  -6.527571\n",
-       "97   10.0  1.074446  0.381405  -0.046620\n",
-       "98   10.0 -2.645456 -4.379010 -11.570148\n",
-       "99   10.0  3.468112 -7.955136 -11.405954\n",
+       "95   10.0 -4.200538  7.433987  -6.014844\n",
+       "96   10.0  0.829132  0.503622  -0.053322\n",
+       "97   10.0  3.667881  9.389405  -7.052950\n",
+       "98   10.0  8.585462 -2.151338 -18.928258\n",
+       "99   10.0 -1.955202 -2.479894  -7.364878\n",
        "\n",
        "[100 rows x 4 columns]"
       ]
@@ -200,33 +200,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>7.835015</td>\n",
-       "      <td>-1.328018</td>\n",
-       "      <td>-4.179510</td>\n",
+       "      <td>-4.200538</td>\n",
+       "      <td>7.433987</td>\n",
+       "      <td>-6.014844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>-4.303682</td>\n",
-       "      <td>8.870256</td>\n",
-       "      <td>-6.527571</td>\n",
+       "      <td>0.829132</td>\n",
+       "      <td>0.503622</td>\n",
+       "      <td>-0.053322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>1.074446</td>\n",
-       "      <td>0.381405</td>\n",
-       "      <td>-0.046620</td>\n",
+       "      <td>3.667881</td>\n",
+       "      <td>9.389405</td>\n",
+       "      <td>-7.052950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>-2.645456</td>\n",
-       "      <td>-4.379010</td>\n",
-       "      <td>-11.570148</td>\n",
+       "      <td>8.585462</td>\n",
+       "      <td>-2.151338</td>\n",
+       "      <td>-18.928258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>3.468112</td>\n",
-       "      <td>-7.955136</td>\n",
-       "      <td>-11.405954</td>\n",
+       "      <td>-1.955202</td>\n",
+       "      <td>-2.479894</td>\n",
+       "      <td>-7.364878</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -241,11 +241,11 @@
        "3  -0.581540  9.872013 -10.784934\n",
        "4  -4.725866 -2.768824  -6.485489\n",
        "..       ...       ...        ...\n",
-       "95  7.835015 -1.328018  -4.179510\n",
-       "96 -4.303682  8.870256  -6.527571\n",
-       "97  1.074446  0.381405  -0.046620\n",
-       "98 -2.645456 -4.379010 -11.570148\n",
-       "99  3.468112 -7.955136 -11.405954\n",
+       "95 -4.200538  7.433987  -6.014844\n",
+       "96  0.829132  0.503622  -0.053322\n",
+       "97  3.667881  9.389405  -7.052950\n",
+       "98  8.585462 -2.151338 -18.928258\n",
+       "99 -1.955202 -2.479894  -7.364878\n",
        "\n",
        "[100 rows x 3 columns]"
       ]
@@ -280,9 +280,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0.1</th>\n",
-       "      <td>0.954778</td>\n",
-       "      <td>0.045222</td>\n",
+       "      <th>0.3</th>\n",
+       "      <td>0.897739</td>\n",
+       "      <td>0.102261</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,7 +290,7 @@
       ],
       "text/plain": [
        "           x1        x2\n",
-       "0.1  0.954778  0.045222"
+       "0.3  0.897739  0.102261"
       ]
      },
      "metadata": {},
@@ -334,7 +334,7 @@
     "\n",
     "display(vars_data)\n",
     "vars_data.to_csv('vars_data.csv', index=False)\n",
-    "h = 0.1\n",
+    "h = 0.3\n",
     "experiment = DVARS(data_file = 'vars_data.csv',\n",
     "                   outvarname = 'y',\n",
     "                   ivars_range = h,\n",
@@ -350,7 +350,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "[[[0.95497039 0.04502961]]\n",
+      "\n",
+      " [[0.94973044 0.05026956]]\n",
+      "\n",
+      " [[0.94755723 0.05244277]]\n",
+      "\n",
+      " [[0.95622628 0.04377372]]\n",
+      "\n",
+      " [[0.94836586 0.05163414]]\n",
+      "\n",
+      " [[0.94647618 0.05352382]]]\n",
+      "Mean Ratios: [[0.9505544 0.0494456]]\n",
+      "Standard Deviation of Ratios: [[0.00371382 0.00371382]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bayesian_optimization import BayesianOptimization\n",
+    "import pandas as pd \n",
+    "from botorch.test_functions import Levy \n",
+    "from varstool import DVARS\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import numpy.linalg as linalg\n",
+    "\n",
+    "# Variables that determine the size of the dataset\n",
+    "N_INITIAL = 50\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 5\n",
+    "DIM = 2\n",
+    "LOWER = -10\n",
+    "UPPER = 10\n",
+    "REPETITIONS = 10  # Number of repetitions\n",
+    "\n",
+    "# Store results for each run\n",
+    "all_ratios = []\n",
+    "\n",
+    "for _ in range(REPETITIONS):\n",
+    "    try:\n",
+    "        optimizer = BayesianOptimization(\n",
+    "            fun=Levy(dim=DIM, negate=True), \n",
+    "            batch_size=BATCH_SIZE, \n",
+    "            dim=DIM, \n",
+    "            epochs=EPOCHS, \n",
+    "            n_init=N_INITIAL, \n",
+    "            lower_bound=LOWER,\n",
+    "            upper_bound=UPPER,\n",
+    "            seed=3,\n",
+    "            acqf_type='qUCB'\n",
+    "        )\n",
+    "\n",
+    "        x_max, y_max = optimizer.run()\n",
+    "        data = optimizer.get_data()\n",
+    "        full = optimizer.format(data, dim=DIM, n_init=N_INITIAL, batch_size=BATCH_SIZE, epochs=EPOCHS)\n",
+    "        \n",
+    "        vars_data = full.drop(columns=['Batch'])\n",
+    "        vars_data.to_csv('vars_data.csv', index=False)\n",
+    "        \n",
+    "        h = 0.1\n",
+    "        experiment = DVARS(\n",
+    "            data_file='vars_data.csv',\n",
+    "            outvarname='y',\n",
+    "            ivars_range=h,\n",
+    "            phi0=1,\n",
+    "            phi_max=1e6,\n",
+    "            tol=1e-6,\n",
+    "            correlation_func_type='linear',\n",
+    "            report_verbose=False\n",
+    "        )\n",
+    "        \n",
+    "        experiment.run()\n",
+    "        all_ratios.append(experiment.ratios)\n",
+    "\n",
+    "    except linalg.LinAlgError:\n",
+    "        print(\"LinAlgError encountered, skipping this repetition.\")\n",
+    "\n",
+    "# Convert the list of ratios to a NumPy array\n",
+    "if all_ratios:  # Ensure there is at least one valid repetition\n",
+    "    ratios_array = np.array(all_ratios)\n",
+    "\n",
+    "    # Calculate mean and standard deviation across repetitions\n",
+    "    mean_ratios = np.mean(ratios_array, axis=0)\n",
+    "    std_ratios = np.std(ratios_array, axis=0)\n",
+    "    print(ratios_array)\n",
+    "    # Display the results\n",
+    "    print(\"Mean Ratios:\", mean_ratios)\n",
+    "    print(\"Standard Deviation of Ratios:\", std_ratios)\n",
+    "else:\n",
+    "    print(\"No valid data to process.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -362,6 +467,7 @@
     }
    ],
    "source": [
+    "import torch\n",
     "DIM = 2\n",
     "LOWER = -10\n",
     "UPPER = 10\n",
@@ -389,18 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "model evaluation: 100%|██████████| 1900/1900 [00:01<00:00, 1792.79it/s]\n",
-      "building pairs: 100%|██████████| 200/200 [00:02<00:00, 94.05it/s] \n",
-      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 141.12it/s]\n",
-      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 1065.63it/s]\n",
-      "bootstrapping: 100%|██████████| 100/100 [00:19<00:00,  5.19it/s]\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 3972.57it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 327.90it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 219.16it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 111.29it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:15<00:00,  6.56it/s]\n",
       "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n"
      ]
@@ -432,12 +538,19 @@
     "                    )\n",
     "\n",
     "# Run the analysis\n",
-    "experiment_1.run_online()"
+    "experiment_1.run_online()\n",
+    "cols = experiment_1.parameters.keys()\n",
+    "df = experiment_1.ivars[cols]\n",
+    "\n",
+    "row_sums = df.sum(axis=1)\n",
+    "\n",
+    "normalized_df = df.div(row_sums, axis=0)\n",
+    "display(normalized_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
