--- a/SO_Numerical_Experiments/vars_hartmann.ipynb
+++ b/SO_Numerical_Experiments/vars_hartmann.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DVARS code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {},
@@ -461,6 +468,89 @@
     "\n",
     "experiment.run()\n",
     "display(experiment.ratios)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bayesian_optimization import BayesianOptimization\n",
+    "import pandas as pd \n",
+    "from botorch.test_functions import Levy \n",
+    "from varstool import DVARS\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import numpy.linalg as linalg\n",
+    "\n",
+    "N_INITIAL = 50\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 5\n",
+    "DIM = 6\n",
+    "LOWER = 0\n",
+    "UPPER = 1\n",
+    "REPETITIONS = 10  \n",
+    "\n",
+    "all_ratios = []\n",
+    "\n",
+    "for i in range(REPETITIONS):\n",
+    "    try:\n",
+    "        optimizer = BayesianOptimization(\n",
+    "            fun=Hartmann(dim=DIM, negate=True), \n",
+    "            batch_size=BATCH_SIZE, \n",
+    "            dim=DIM, \n",
+    "            epochs=EPOCHS, \n",
+    "            n_init=N_INITIAL, \n",
+    "            lower_bound=LOWER,\n",
+    "            upper_bound=UPPER,\n",
+    "            seed=i, # Using another seed for each run\n",
+    "            acqf_type='qUCB'\n",
+    "        )\n",
+    "\n",
+    "        x_max, y_max = optimizer.run()\n",
+    "        data = optimizer.get_data()\n",
+    "        full = optimizer.format(data, dim=DIM, n_init=N_INITIAL, batch_size=BATCH_SIZE, epochs=EPOCHS)\n",
+    "        \n",
+    "        vars_data = full.drop(columns=['Batch'])\n",
+    "        vars_data.to_csv('vars_data.csv', index=False)\n",
+    "        \n",
+    "        h = 0.3\n",
+    "        experiment = DVARS(\n",
+    "            data_file='vars_data.csv',\n",
+    "            outvarname='y',\n",
+    "            ivars_range=h,\n",
+    "            phi0=1,\n",
+    "            phi_max=1e6,\n",
+    "            tol=1e-6,\n",
+    "            correlation_func_type='linear',\n",
+    "            report_verbose=False\n",
+    "        )\n",
+    "        \n",
+    "        experiment.run()\n",
+    "        all_ratios.append(experiment.ratios)\n",
+    "\n",
+    "    except linalg.LinAlgError:\n",
+    "        print(\"LinAlgError encountered, skipping this repetition.\")\n",
+    "\n",
+    "\n",
+    "if all_ratios:  \n",
+    "    ratios_array = np.array(all_ratios)\n",
+    "    mean_ratios = np.mean(ratios_array, axis=0)\n",
+    "    std_ratios = np.std(ratios_array, axis=0)\n",
+    "    print(ratios_array)\n",
+    "    print(\"Mean Ratios:\", mean_ratios)\n",
+    "    print(\"Standard Deviation of Ratios:\", std_ratios)\n",
+    "else:\n",
+    "    print(\"No valid data to process.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VARS code"
    ]
   },
   {
