--- a/SO_Numerical_Experiments/vars_levy.ipynb
+++ b/SO_Numerical_Experiments/vars_levy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DVARS code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -361,19 +368,18 @@
       "LinAlgError encountered, skipping this repetition.\n",
       "LinAlgError encountered, skipping this repetition.\n",
       "LinAlgError encountered, skipping this repetition.\n",
-      "[[[0.95497039 0.04502961]]\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "[[[0.89990784 0.10009216]]\n",
       "\n",
-      " [[0.94973044 0.05026956]]\n",
+      " [[0.91169227 0.08830773]]\n",
       "\n",
-      " [[0.94755723 0.05244277]]\n",
+      " [[0.90410063 0.09589937]]\n",
       "\n",
-      " [[0.95622628 0.04377372]]\n",
+      " [[0.88292337 0.11707663]]\n",
       "\n",
-      " [[0.94836586 0.05163414]]\n",
-      "\n",
-      " [[0.94647618 0.05352382]]]\n",
-      "Mean Ratios: [[0.9505544 0.0494456]]\n",
-      "Standard Deviation of Ratios: [[0.00371382 0.00371382]]\n"
+      " [[0.88572659 0.11427341]]]\n",
+      "Mean Ratios: [[0.89687014 0.10312986]]\n",
+      "Standard Deviation of Ratios: [[0.01095349 0.01095349]]\n"
      ]
     }
    ],
@@ -387,19 +393,17 @@
     "import numpy as np\n",
     "import numpy.linalg as linalg\n",
     "\n",
-    "# Variables that determine the size of the dataset\n",
     "N_INITIAL = 50\n",
     "EPOCHS = 10\n",
     "BATCH_SIZE = 5\n",
     "DIM = 2\n",
     "LOWER = -10\n",
     "UPPER = 10\n",
-    "REPETITIONS = 10  # Number of repetitions\n",
+    "REPETITIONS = 20  \n",
     "\n",
-    "# Store results for each run\n",
     "all_ratios = []\n",
     "\n",
-    "for _ in range(REPETITIONS):\n",
+    "for i in range(REPETITIONS):\n",
     "    try:\n",
     "        optimizer = BayesianOptimization(\n",
     "            fun=Levy(dim=DIM, negate=True), \n",
@@ -409,7 +413,7 @@
     "            n_init=N_INITIAL, \n",
     "            lower_bound=LOWER,\n",
     "            upper_bound=UPPER,\n",
-    "            seed=3,\n",
+    "            seed=i,\n",
     "            acqf_type='qUCB'\n",
     "        )\n",
     "\n",
@@ -420,7 +424,7 @@
     "        vars_data = full.drop(columns=['Batch'])\n",
     "        vars_data.to_csv('vars_data.csv', index=False)\n",
     "        \n",
-    "        h = 0.1\n",
+    "        h = 0.3\n",
     "        experiment = DVARS(\n",
     "            data_file='vars_data.csv',\n",
     "            outvarname='y',\n",
@@ -438,19 +442,23 @@
     "    except linalg.LinAlgError:\n",
     "        print(\"LinAlgError encountered, skipping this repetition.\")\n",
     "\n",
-    "# Convert the list of ratios to a NumPy array\n",
-    "if all_ratios:  # Ensure there is at least one valid repetition\n",
-    "    ratios_array = np.array(all_ratios)\n",
     "\n",
-    "    # Calculate mean and standard deviation across repetitions\n",
+    "if all_ratios:  \n",
+    "    ratios_array = np.array(all_ratios)\n",
     "    mean_ratios = np.mean(ratios_array, axis=0)\n",
     "    std_ratios = np.std(ratios_array, axis=0)\n",
     "    print(ratios_array)\n",
-    "    # Display the results\n",
     "    print(\"Mean Ratios:\", mean_ratios)\n",
     "    print(\"Standard Deviation of Ratios:\", std_ratios)\n",
     "else:\n",
     "    print(\"No valid data to process.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VARS code"
    ]
   },
   {
@@ -618,6 +626,251 @@
     "\n",
     "normalized_df = df.div(row_sums, axis=0)\n",
     "display(normalized_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from varstool import VARS, Model\n",
+    "\n",
+    "my_parameters = {'x1': [-10, 10], 'x2': [-10, 10]}\n",
+    "levy_model = Model(wrapped_levy_function)\n",
+    "\n",
+    "def run_experiment(seed):\n",
+    "    experiment = VARS(\n",
+    "        parameters=my_parameters,\n",
+    "        num_stars=100,\n",
+    "        delta_h=0.1,\n",
+    "        ivars_scales=(0.1, 0.3, 0.5),\n",
+    "        sampler='sobol_seq',\n",
+    "        seed=seed,\n",
+    "        model=levy_model,\n",
+    "        bootstrap_flag=True,\n",
+    "        bootstrap_size=100,\n",
+    "        bootstrap_ci=0.9,\n",
+    "        report_verbose=True,\n",
+    "    )\n",
+    "    experiment.run_online()\n",
+    "    cols = experiment.parameters.keys()\n",
+    "    df = experiment.ivars[cols]\n",
+    "    row_sums = df.sum(axis=1)\n",
+    "    normalized_df = df.div(row_sums, axis=0)\n",
+    "    return normalized_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 2577.23it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 359.19it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 261.71it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 377.22it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  6.97it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4956.09it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 369.58it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 294.65it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 690.82it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  7.10it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4824.82it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 359.63it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 220.21it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 1026.63it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:13<00:00,  7.17it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4822.60it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 360.76it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 248.34it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 1257.85it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  7.08it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4672.65it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 346.17it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 291.83it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 1239.09it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:13<00:00,  7.21it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4848.06it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 371.79it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 321.46it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 777.59it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  7.00it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4821.75it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 372.01it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 330.61it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 902.19it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  7.08it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4959.28it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 372.95it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 291.22it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 1016.80it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  7.08it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4836.07it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 366.56it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 324.58it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 1157.37it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  7.01it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n",
+      "model evaluation: 100%|██████████| 1900/1900 [00:00<00:00, 4840.17it/s]\n",
+      "building pairs: 100%|██████████| 200/200 [00:00<00:00, 344.16it/s]\n",
+      "VARS analysis: 100%|██████████| 10/10 [00:00<00:00, 96.13it/s]\n",
+      "factor ranking: 100%|██████████| 2/2 [00:00<00:00, 594.35it/s]\n",
+      "bootstrapping: 100%|██████████| 100/100 [00:14<00:00,  6.91it/s]\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/varstool/sensitivity_analysis/vars_funcs.py:989: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  result_bs_sobol_ranking[param].eq(st_factor_ranking[param][0]).sum() / bootstrap_size)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.1</th>\n",
+       "      <td>0.985902</td>\n",
+       "      <td>0.014098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3</th>\n",
+       "      <td>0.962494</td>\n",
+       "      <td>0.037506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.5</th>\n",
+       "      <td>0.953577</td>\n",
+       "      <td>0.046423</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           x1        x2\n",
+       "0.1  0.985902  0.014098\n",
+       "0.3  0.962494  0.037506\n",
+       "0.5  0.953577  0.046423"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.1</th>\n",
+       "      <td>2.605319e-10</td>\n",
+       "      <td>2.605318e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3</th>\n",
+       "      <td>6.424707e-10</td>\n",
+       "      <td>6.424707e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.5</th>\n",
+       "      <td>7.945072e-10</td>\n",
+       "      <td>7.945072e-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               x1            x2\n",
+       "0.1  2.605319e-10  2.605318e-10\n",
+       "0.3  6.424707e-10  6.424707e-10\n",
+       "0.5  7.945072e-10  7.945072e-10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "num_repeats = 10\n",
+    "results = []\n",
+    "\n",
+    "for i in range(num_repeats):\n",
+    "    seed = 123456789 + i  # Use different seeds\n",
+    "    normalized_df = run_experiment(seed)\n",
+    "    results.append(normalized_df)\n",
+    "\n",
+    "all_results = pd.concat(results)\n",
+    "\n",
+    "mean_df = all_results.groupby(all_results.index).mean()\n",
+    "std_df = all_results.groupby(all_results.index).std()\n",
+    "\n",
+    "display(mean_df)\n",
+    "display(std_df)"
    ]
   }
  ],
