--- a/SO_Numerical_Experiments/vars_hartmann.ipynb
+++ b/SO_Numerical_Experiments/vars_hartmann.ipynb
@@ -472,13 +472,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.16990178 0.18337746 0.         0.19394185 0.17263997 0.28013894]]\n",
+      "\n",
+      " [[0.19532071 0.17077837 0.0300995  0.15910509 0.20522213 0.2394742 ]]\n",
+      "\n",
+      " [[0.11218578 0.20324552 0.         0.19783801 0.25415503 0.23257566]]\n",
+      "\n",
+      " [[0.13672389 0.15818631 0.         0.27639927 0.22433091 0.20435961]]\n",
+      "\n",
+      " [[0.17421946 0.17203864 0.         0.22056143 0.23127788 0.2019026 ]]\n",
+      "\n",
+      " [[0.0730916  0.16211458 0.0180821  0.26126778 0.23309796 0.25234598]]\n",
+      "\n",
+      " [[0.09980437 0.17263523 0.07430109 0.19439579 0.24599906 0.21286446]]\n",
+      "\n",
+      " [[0.22296825 0.16392135 0.0322348  0.24881688 0.14088258 0.19117614]]\n",
+      "\n",
+      " [[0.10482198 0.17908613 0.05970599 0.18718196 0.27999807 0.18920586]]\n",
+      "\n",
+      " [[0.25342998 0.2135877  0.         0.22894683 0.05684763 0.24718787]]]\n",
+      "Mean Ratios: [[0.15424678 0.17789713 0.02144235 0.21684549 0.20444512 0.22512313]]\n",
+      "Standard Deviation of Ratios: [[0.05564183 0.01701005 0.0259995  0.03508011 0.06219314 0.02842395]]\n"
+     ]
+    }
+   ],
    "source": [
     "from bayesian_optimization import BayesianOptimization\n",
     "import pandas as pd \n",
-    "from botorch.test_functions import Levy \n",
+    "from botorch.test_functions import Hartmann \n",
     "from varstool import DVARS\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -516,7 +544,7 @@
     "        vars_data = full.drop(columns=['Batch'])\n",
     "        vars_data.to_csv('vars_data.csv', index=False)\n",
     "        \n",
-    "        h = 0.3\n",
+    "        h = 0.5\n",
     "        experiment = DVARS(\n",
     "            data_file='vars_data.csv',\n",
     "            outvarname='y',\n",
