--- a/SO_Numerical_Experiments/vars_levy.ipynb
+++ b/SO_Numerical_Experiments/vars_levy.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -369,17 +369,30 @@
       "LinAlgError encountered, skipping this repetition.\n",
       "LinAlgError encountered, skipping this repetition.\n",
       "LinAlgError encountered, skipping this repetition.\n",
-      "[[[0.89990784 0.10009216]]\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "LinAlgError encountered, skipping this repetition.\n",
+      "[[[0.90161907 0.09838093]]\n",
       "\n",
-      " [[0.91169227 0.08830773]]\n",
+      " [[0.91453217 0.08546783]]\n",
       "\n",
-      " [[0.90410063 0.09589937]]\n",
+      " [[0.88491622 0.11508378]]\n",
       "\n",
-      " [[0.88292337 0.11707663]]\n",
+      " [[0.90743325 0.09256675]]\n",
       "\n",
-      " [[0.88572659 0.11427341]]]\n",
-      "Mean Ratios: [[0.89687014 0.10312986]]\n",
-      "Standard Deviation of Ratios: [[0.01095349 0.01095349]]\n"
+      " [[0.88708447 0.11291553]]\n",
+      "\n",
+      " [[0.89868119 0.10131881]]\n",
+      "\n",
+      " [[0.90003798 0.09996202]]\n",
+      "\n",
+      " [[0.8967867  0.1032133 ]]]\n",
+      "Mean Ratios: [[0.89888638 0.10111362]]\n",
+      "Standard Deviation of Ratios: [[0.00912095 0.00912095]]\n"
      ]
     }
    ],
