--- a/Case_Study/chapter_6.ipynb
+++ b/Case_Study/chapter_6.ipynb
@@ -927,6 +927,57 @@
     "experiment.run()\n",
     "display(experiment.ratios)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ARD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import botorch as bo\n",
+    "\n",
+    "# Features and target variable\n",
+    "features = ['DMSO_content_realized', 'concentration_realized',\n",
+    "            'combustion_temp_realized', 'air_flow_rate_realized',\n",
+    "            'spray_flow_rate_realized', 'spray_height_realized', 'num_passes_realized']\n",
+    "\n",
+    "target = 'scaled_conductivity_avg'  # Target variable (scaled)\n",
+    "\n",
+    "# Data processing: normalize X, standardize y\n",
+    "X = BO_data[features]\n",
+    "y = BO_data[target]\n",
+    "std = 0.2\n",
+    "\n",
+    "# Normalize X to (0,1)\n",
+    "X_normalized = (X - X.min()) / (X.max() - X.min())\n",
+    "\n",
+    "# Standardize y to N(0,1)\n",
+    "y_standardized = (y - y.mean()) / y.std()\n",
+    "\n",
+    "# Convert to tensors\n",
+    "X_tensor = torch.tensor(X_normalized.values, dtype=torch.double)\n",
+    "y_tensor = torch.tensor(y_standardized.values, dtype=torch.double)\n",
+    "\n",
+    "# Now use the full dataset\n",
+    "X_full = X_tensor\n",
+    "Y_full = y_tensor\n",
+    "\n",
+    "# Normalize X_full and standardize Y_full\n",
+    "X_full = (X_full - X_full.min()) / (X_full.max() - X_full.min())  # Normalize (0,1)\n",
+    "Y_full = (Y_full - Y_full.mean()) / Y_full.std()  # Standardize (N(0,1))\n",
+    "\n",
+    "# Fit Gaussian Process model\n",
+    "train_Yvar = torch.full_like(Y_full.unsqueeze(-1), std)\n",
+    "gp = bo.models.SingleTaskGP(X_full, Y_full.unsqueeze(-1), train_Yvar=train_Yvar)"
+   ]
   }
  ],
  "metadata": {
