--- a/Case_Study/chapter_6.ipynb
+++ b/Case_Study/chapter_6.ipynb
@@ -937,12 +937,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/models/utils/assorted.py:174: InputDataWarning: Input data is not contained to the unit cube. Please consider min-max scaling the input data.\n",
+      "  warnings.warn(msg, InputDataWarning)\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/models/utils/assorted.py:202: InputDataWarning: Input data is not standardized (mean = tensor([1.6009], dtype=torch.float64), std = tensor([1.5127], dtype=torch.float64)). Please consider scaling the input to zero mean and unit variance.\n",
+      "  warnings.warn(msg, InputDataWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.04016765 0.36278547 6.44346073 1.66108971 0.33755471 0.35515831\n",
+      " 1.08060398]\n",
+      "[24.89565699  2.75645001  0.1551961   0.60201444  2.9624827   2.81564575\n",
+      "  0.9254084 ]\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import botorch as bo\n",
+    "from gpytorch.mlls import ExactMarginalLogLikelihood\n",
+    "from botorch.fit import fit_gpytorch_mll\n",
     "\n",
     "# Features and target variable\n",
     "features = ['DMSO_content_realized', 'concentration_realized',\n",
@@ -954,29 +977,51 @@
     "# Data processing: normalize X, standardize y\n",
     "X = BO_data[features]\n",
     "y = BO_data[target]\n",
-    "std = 0.2\n",
+    "std = 1\n",
     "\n",
-    "# Normalize X to (0,1)\n",
-    "X_normalized = (X - X.min()) / (X.max() - X.min())\n",
-    "\n",
-    "# Standardize y to N(0,1)\n",
-    "y_standardized = (y - y.mean()) / y.std()\n",
-    "\n",
-    "# Convert to tensors\n",
-    "X_tensor = torch.tensor(X_normalized.values, dtype=torch.double)\n",
-    "y_tensor = torch.tensor(y_standardized.values, dtype=torch.double)\n",
+    "X_tensor = torch.tensor(X.values, dtype=torch.double)\n",
+    "y_tensor = torch.tensor(y.values, dtype=torch.double)\n",
     "\n",
     "# Now use the full dataset\n",
     "X_full = X_tensor\n",
     "Y_full = y_tensor\n",
-    "\n",
-    "# Normalize X_full and standardize Y_full\n",
-    "X_full = (X_full - X_full.min()) / (X_full.max() - X_full.min())  # Normalize (0,1)\n",
-    "Y_full = (Y_full - Y_full.mean()) / Y_full.std()  # Standardize (N(0,1))\n",
-    "\n",
-    "# Fit Gaussian Process model\n",
     "train_Yvar = torch.full_like(Y_full.unsqueeze(-1), std)\n",
-    "gp = bo.models.SingleTaskGP(X_full, Y_full.unsqueeze(-1), train_Yvar=train_Yvar)"
+    "\n",
+    "model = bo.models.SingleTaskGP(X_full, Y_full.unsqueeze(-1))\n",
+    "mll = ExactMarginalLogLikelihood(model.likelihood, model)\n",
+    "fit_gpytorch_mll(mll)\n",
+    "\n",
+    "\n",
+    "lengthscales = model.covar_module.base_kernel.lengthscale.squeeze().cpu().detach().numpy()\n",
+    "print(lengthscales)\n",
+    "rel_ARD = np.zeros(7)\n",
+    "rel_ARD += 1 / lengthscales\n",
+    "print(rel_ARD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.89565699  2.75645001  0.1551961   0.60201444  2.9624827   2.81564575\n",
+      "  0.9254084 ]\n",
+      "[1.         0.11072012 0.00623386 0.0241815  0.11899596 0.11309787\n",
+      " 0.03717148]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lengthscales = model.covar_module.base_kernel.lengthscale.squeeze().cpu().detach().numpy()\n",
+    "rel_ARD = np.zeros(7)\n",
+    "rel_ARD += 1 / lengthscales\n",
+    "rel_ARD_nor = rel_ARD/np.max(rel_ARD)\n",
+    "print(rel_ARD)\n",
+    "print(rel_ARD_nor)"
    ]
   }
  ],
