--- a/Case_Study/chapter_6.ipynb
+++ b/Case_Study/chapter_6.ipynb
@@ -937,22 +937,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/models/utils/assorted.py:174: InputDataWarning: Input data is not contained to the unit cube. Please consider min-max scaling the input data.\n",
+      "  warnings.warn(msg, InputDataWarning)\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/models/utils/assorted.py:202: InputDataWarning: Input data is not standardized (mean = tensor([1.6009], dtype=torch.float64), std = tensor([1.5127], dtype=torch.float64)). Please consider scaling the input to zero mean and unit variance.\n",
+      "  warnings.warn(msg, InputDataWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "ExactMarginalLogLikelihood(\n",
        "  (likelihood): GaussianLikelihood(\n",
        "    (noise_covar): HomoskedasticNoise(\n",
-       "      (raw_noise_constraint): Interval(1.000E-08, 1.000E+00)\n",
+       "      (raw_noise_constraint): GreaterThan(1.000E-04)\n",
        "    )\n",
        "  )\n",
        "  (model): SingleTaskGP(\n",
        "    (likelihood): GaussianLikelihood(\n",
        "      (noise_covar): HomoskedasticNoise(\n",
-       "        (raw_noise_constraint): Interval(1.000E-08, 1.000E+00)\n",
+       "        (raw_noise_constraint): GreaterThan(1.000E-04)\n",
        "      )\n",
        "    )\n",
        "    (mean_module): ConstantMean()\n",
@@ -968,7 +978,7 @@
        ")"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,25 +1012,25 @@
     "\n",
     "X_normed = (X_tensor - X_tensor.min()) / (X_tensor.max() - X_tensor.min()) # Norm to (0,1)\n",
     "Y_normed = (y_tensor - y_tensor.mean()) / y_tensor.std() # N(0,1)\n",
-    "likelihood = GaussianLikelihood(noise_constraint=Interval(1e-8, 1))  # Noise constraints (1e-8, 1e-3)\n",
-    "model = bo.models.SingleTaskGP(X_normed, Y_normed.unsqueeze(-1), likelihood=likelihood)\n",
+    "likelihood = GaussianLikelihood()  # Noise constraints (1e-8, 1e-3)\n",
+    "model = bo.models.SingleTaskGP(X_tensor, y_tensor.unsqueeze(-1), likelihood=likelihood)\n",
     "mll = ExactMarginalLogLikelihood(model.likelihood, model)\n",
     "fit_gpytorch_mll(mll)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 3.00925864  2.99957134 10.42737031  2.18382149  2.99955015 59.74759796\n",
-      "  2.73336783]\n",
-      "[0.05036619 0.05020405 0.17452367 0.03655078 0.05020369 1.\n",
-      " 0.04574858]\n"
+      "[ 3.01024472  3.0000751  10.42780509  2.18374901  3.0000537  59.74611455\n",
+      "  2.73427741]\n",
+      "[0.05038394 0.05021373 0.17453528 0.03655048 0.05021337 1.\n",
+      " 0.04576494]\n"
      ]
     }
    ],
